Module configurado e api configurada

--- a/mobilerickmorty/src/app/tab1/tab1.page.html
+++ b/mobilerickmorty/src/app/tab1/tab1.page.html
@@ -13,5 +13,18 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>  {{people.name}}  d</ion-card-title>
+      <ion-card-subtitle>ID : {{people.id}}</ion-card-subtitle>
+    </ion-card-header>
+    <!-- <ion-image [src]="people.image" alt="Person Image"></ion-image> -->
+    <ion-card-content>
+      This is the first tab of your Ionic application. You can add content here.
+    </ion-card-content>
+  </ion-card>
+
+    
+  
 </ion-content>
