--- a/mobilerickmorty/src/app/tab1/tab1.page.html
+++ b/mobilerickmorty/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Rick and Morty API
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,22 +9,27 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Rick and Morty API</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>  {{people.name}}  d</ion-card-title>
-      <ion-card-subtitle>ID : {{people.id}}</ion-card-subtitle>
-    </ion-card-header>
-    <!-- <ion-image [src]="people.image" alt="Person Image"></ion-image> -->
-    <ion-card-content>
-      This is the first tab of your Ionic application. You can add content here.
-    </ion-card-content>
-  </ion-card>
 
-    
-  
+  <ion-grid [fixed]="true" *ngIf="people && people.length > 0">
+    <ion-row>
+      <ion-col size="6" size-md="2" size-lg="2" *ngFor="let person of people; let i = index"> 
+        <ion-card-title>  {{person.name}} </ion-card-title>
+        <ion-card-subtitle>ID : {{person?.id}}</ion-card-subtitle>
+        <ion-img src="{{person?.image}}" alt="Person Image"></ion-img>
+        <ion-button fill="outline" color="primary" (click)="goToDetails(person.id)">Details</ion-button>
+      </ion-col>
+      <!-- <ion-col size="6" size-md="4" size-lg="2" *ngFor="let person of people; let i = index"> 
+        <ion-card-title>  {{person.name}} </ion-card-title>
+        <ion-card-subtitle>ID : {{person?.id}}</ion-card-subtitle>
+        <ion-img src="{{person?.image}}" alt="Person Image"></ion-img>
+        <ion-button  size="large" color="primary" >Details</ion-button>
+      </ion-col> -->
+      
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
